# my-zipline-uploader

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  gui.rs  install.rs  logger.rs  main.rs  notify.rs  settings.rs  shorten.rs  upload.rs
