[package]
name = "zipline-upload"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zipline-upload"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.15"
dirs = "5"
mime_guess = "2"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
